--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "start:dev": "sirv public --single --dev",
         "stories": "start-storybook",
         "build-stories": "build-storybook",
-        "static-stories": "build-storybook -c .storybook -o .out"
+        "static-stories": "build-storybook -c .storybook -o .out",
+        "lint": "./node_modules/.bin/eslint ."
     },
     "dependencies": {
         "sirv-cli": "^0.4.4"
@@ -32,6 +33,7 @@
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-svelte3": "^2.7.3",
+        "husky": "^5.0.1",
         "npm-run-all": "^4.1.5",
         "postcss": "^7.0.18",
         "postcss-cli": "^6.1.3",
