--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "author": "Jerric Lyns John",
     "license": "MIT",
     "version": "0.0.2",
+    "private": true,
     "scripts": {
         "build": "rollup -c",
         "autobuild": "rollup -c -w",
@@ -12,7 +13,8 @@
         "stories": "start-storybook",
         "build-stories": "build-storybook",
         "static-stories": "build-storybook -c .storybook -o .out",
-        "lint": "./node_modules/.bin/eslint ."
+        "lint": "./node_modules/.bin/eslint .",
+        "postinstall": "husky install"
     },
     "dependencies": {
         "sirv-cli": "^0.4.4"
