--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,24 @@
 {
+    "env": {
+        "browser": true,
+        "es6": true,
+        "jasmine": true,
+        "node": true
+    },
     "parser": "babel-eslint",
     "parserOptions": {
+        "ecmaVersion": 2019,
         "sourceType": "module"
     },
-    "plugins": ["prettier", "svelte3"],
-    "extends": ["prettier"],
+    "plugins": ["svelte3"],
+    "extends": ["eslint:recommended"],
+    "overrides": [
+        {
+          "files": ["**/*.svelte"],
+          "processor": "svelte3/svelte3"
+        }
+    ],
     "rules": {
-        "prettier/prettier": "error"
+       // "prettier/prettier": "error"
     }
 }
