--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "stories": "start-storybook",
         "build-stories": "build-storybook",
         "static-stories": "build-storybook -c .storybook -o .out",
-        "lint": "./node_modules/.bin/eslint .",
+        "lint": "./node_modules/.bin/eslint --ext .svelte --ext .js .",
         "postinstall": "husky install"
     },
     "dependencies": {
